edited the path for css & images

--- a/index.html
+++ b/index.html
@@ -13,29 +13,33 @@
 </head>
 <body>
 
-<div class="container">
+<div class="wrapper">
   <header>
-    <img src="/images/logo.svg">
+    <div class="container">
+     <img src="/images/logo.svg">
+   </div>
   </header>
 
   <main>
-    <div class="mockup">
-      <img src="/images/illustration-mockups.svg">
-    </div>
+    <div class="container">
+      <div class="mockup">
+        <img src="/images/illustration-mockups.svg">
+      </div>
 
-    <div class="text">
-      <h1>build the community your fans will love</h1>
-      <p>huddle re-imagines the way we build communities, you have a voice,
-        but so does your audience. create connictions with your users as you
-        engage in genuine discussion. </p>
-      <a class="btn" href="#">register</a>
+      <div class="text">
+        <h1>build the community your fans will love</h1>
+        <p>huddle re-imagines the way we build communities, you have a voice,
+          but so does your audience. create connictions with your users as you
+          engage in genuine discussion. </p>
+        <a class="btn" href="#">register</a>
+      </div>
     </div>
   </main>
 
   <footer>
-    <a href="#" class="social-media"><i class="fab fa-facebook-f  fa-2x"></i></a>
-    <a href="#" class="social-media"><i class="fab fa-twitter fa-2x"></i></a>
-    <a href="#" class="social-media"><i class="fab fa-instagram fa-2x"></i></a>
+    <a href="#" class="social-media"><i class="fab fa-facebook-f  fa-1x"></i></a>
+    <a href="#" class="social-media"><i class="fab fa-twitter fa-1x"></i></a>
+    <a href="#" class="social-media"><i class="fab fa-instagram fa-1x"></i></a>
   </footer>
 </div>
 
