edited the path for css & images again

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/25f3901711.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/style/page-style.css">
-  <link rel="stylesheet" href="/style/preset.css">
+  <link rel="stylesheet" href="style/page-style.css">
+  <link rel="stylesheet" href="style/preset.css">
   <title>Huddle landing page with single introductory section</title>
   </style>
 </head>
@@ -16,14 +16,14 @@
 <div class="wrapper">
   <header>
     <div class="container">
-     <img src="/images/logo.svg">
+     <img src="images/logo.svg">
    </div>
   </header>
 
   <main>
     <div class="container">
       <div class="mockup">
-        <img src="/images/illustration-mockups.svg">
+        <img src="images/illustration-mockups.svg">
       </div>
 
       <div class="text">
